<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#99CC99"
    android:gravity="center"
    android:orientation="horizontal" >
    
	<LinearLayout 
        android:layout_height="45dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_zhangqi"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="45dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/third_cards"
            android:textColor="#000000"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout 
        android:layout_height="45dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hundred_cards"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="45dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year_cards"
            android:textColor="#000000"
            android:textSize="18sp"/>
    </LinearLayout>
    
</LinearLayout>
