<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#333333"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/id_iv_tabline"
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:background="@drawable/tabline" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/buttom_ll_waitsell"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/buttom_tv_waitsell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/waitsell"
                android:textColor="#008000" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttom_ll_sell"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/buttom_tv_selled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/selled"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/buttom_tv_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/customer"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/buttom_tv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/record"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/buttom_tv_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/commission"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>